prowlarr_server/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr  
          volumeMounts:
          - mountPath: /config
            name: prowlarr-volume
          ports:
            - containerPort: 9696 
      volumes:
      - name: prowlarr-volume
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
