prowlarr_server/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: jellyfin
spec:
  selector:
    app: prowlarr
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: 9696
