prowlarr_server/prowlarr-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr-network-policy
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: prowlarr
  policyTypes:
    - Egress
  egress:
     - to:
      - podSelector:
          matchLabels:
            app: radarr
      ports:
        - protocol: TCP
          port: 7878
    - to:
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 8989
